feat: 整合API: RackMove&RollTask合併為MoveTask；更新APIEvent開啟DB: MiddleCmd方法

--- a/Mirle.WebAPI.U2NMMA30/Mirle.WebAPI.csproj
+++ b/Mirle.WebAPI.U2NMMA30/Mirle.WebAPI.csproj
@@ -50,14 +50,13 @@
     <Compile Include="clsTool.cs" />
     <Compile Include="clsWriLog.cs" />
     <Compile Include="FunctionForController\BufferStatusQuery.cs" />
+    <Compile Include="FunctionForController\MoveTask.cs" />
     <Compile Include="FunctionForController\TransferCommandRequest.cs" />
     <Compile Include="FunctionForController\TaskCancel.cs" />
-    <Compile Include="FunctionForController\RollTask.cs" />
     <Compile Include="FunctionForController\RetrieveTransfer.cs" />
     <Compile Include="FunctionForController\RemoteLocalRequest.cs" />
     <Compile Include="FunctionForController\RackTurn.cs" />
     <Compile Include="FunctionForController\RackRequest.cs" />
-    <Compile Include="FunctionForController\RackMove.cs" />
     <Compile Include="FunctionForController\PutawayTransfer.cs" />
     <Compile Include="FunctionForController\NewCarrierToStage.cs" />
     <Compile Include="FunctionForController\LotTransferCancel.cs" />
@@ -112,14 +111,13 @@
     <Compile Include="ReplyForWES\LotReply.cs" />
     <Compile Include="ReplyForWES\LotPutawayCheckReply.cs" />
     <Compile Include="ReplyForWES\CarrierPutawayCheckReply.cs" />
+    <Compile Include="ReportInfoForController\MoveTaskInfo.cs" />
     <Compile Include="ReportInfoForController\TransferCommandRequestInfo.cs" />
     <Compile Include="ReportInfoForController\TaskCancelInfo.cs" />
-    <Compile Include="ReportInfoForController\RollTaskInfo.cs" />
     <Compile Include="ReportInfoForController\RetrieveTransferInfo.cs" />
     <Compile Include="ReportInfoForController\RemoteLocalRequestInfo.cs" />
     <Compile Include="ReportInfoForController\RackTurnInfo.cs" />
     <Compile Include="ReportInfoForController\RackRequestInfo.cs" />
-    <Compile Include="ReportInfoForController\RackMoveInfo.cs" />
     <Compile Include="ReportInfoForController\PutawayTransferInfo.cs" />
     <Compile Include="ReportInfoForController\NewCarrierToStageInfo.cs" />
     <Compile Include="ReportInfoForController\LotTransferCancelInfo.cs" />
