--- a/Mirle.ASRS.WCS/Mirle.ASRS.WCS.csproj
+++ b/Mirle.ASRS.WCS/Mirle.ASRS.WCS.csproj
@@ -56,6 +56,12 @@
     <Compile Include="Event\LoadPortEventArgs.cs" />
     <Compile Include="Library\clInitSys.cs" />
     <Compile Include="Library\clsWriLog.cs" />
+    <Compile Include="View\frmInsertCmd_CmdMst.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="View\frmInsertCmd_CmdMst.Designer.cs">
+      <DependentUpon>frmInsertCmd_CmdMst.cs</DependentUpon>
+    </Compile>
     <Compile Include="View\MainForm.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -64,6 +70,9 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <EmbeddedResource Include="View\frmInsertCmd_CmdMst.resx">
+      <DependentUpon>frmInsertCmd_CmdMst.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="View\MainForm.resx">
       <DependentUpon>MainForm.cs</DependentUpon>
     </EmbeddedResource>
