--- a/Mirle.DB.Proc/Mirle.DB.Proc.csproj
+++ b/Mirle.DB.Proc/Mirle.DB.Proc.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsAlarmCVCLog.cs" />
     <Compile Include="clsAlarmData.cs" />
     <Compile Include="clsCmd_Dtl.cs" />
     <Compile Include="clsCmd_Mst.cs" />
