feat: 新增Table: LotRetrieveNG

--- a/Mirle.DB.Fun/Mirle.DB.Fun.csproj
+++ b/Mirle.DB.Fun/Mirle.DB.Fun.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="clsLotRetrieveNG.cs" />
     <Compile Include="clsAlarmCVCLog.cs" />
     <Compile Include="clsAlarmData.cs" />
     <Compile Include="clsCMD_DTL.cs" />
@@ -66,6 +67,7 @@
     <Compile Include="clsUnitStsLog.cs" />
     <Compile Include="clsWriLog.cs" />
     <Compile Include="Events\NeedShelfToShelfArgs.cs" />
+    <Compile Include="Parameter\clsLotRetrieveNG.cs" />
     <Compile Include="Parameter\clsAlarmCVCLog.cs" />
     <Compile Include="Parameter\clsAlarmData.cs" />
     <Compile Include="Parameter\clsCmd_Dtl.cs" />
