feat: 新增LotRetrieveTransfer流程；更新部分收E800 API內容

--- a/Mirle.DB.ClearCmd.Proc/Mirle.DB.ClearCmd.Proc.csproj
+++ b/Mirle.DB.ClearCmd.Proc/Mirle.DB.ClearCmd.Proc.csproj
@@ -58,6 +58,7 @@
   <ItemGroup>
     <Compile Include="clsDelCmdMst_His_Proc.cs" />
     <Compile Include="clsHost.cs" />
+    <Compile Include="clsLotRetrieveFailCancel_Proc.cs" />
     <Compile Include="clsMoveCmdInHistory_Proc.cs" />
     <Compile Include="clsWriLog.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
