--- a/Mirle.ASRS.WCS/Mirle.ASRS.WCS.csproj
+++ b/Mirle.ASRS.WCS/Mirle.ASRS.WCS.csproj
@@ -147,6 +147,10 @@
       <Project>{60C72719-D780-4BC8-9198-FC21C9754918}</Project>
       <Name>Mirle.DB.Proc</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Mirle.DB.WMS.Proc\Mirle.DB.WMS.Proc.csproj">
+      <Project>{553BD8CF-F4C1-4B39-97AB-42CC2F7C8187}</Project>
+      <Name>Mirle.DB.WMS.Proc</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Mirle.Def.U2NMMA30\Mirle.Def.U2NMMA30.csproj">
       <Project>{e6f732fe-3905-49a7-b2cf-b4fa79c2dc5d}</Project>
       <Name>Mirle.Def.U2NMMA30</Name>
