--- a/Mirle.EccsSignal_2/Mirle.EccsSignal.csproj
+++ b/Mirle.EccsSignal_2/Mirle.EccsSignal.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Data.SQLite, Version=1.0.115.5, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
       <HintPath>..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.115.5\lib\net46\System.Data.SQLite.dll</HintPath>
     </Reference>
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -60,6 +61,12 @@
     <Compile Include="ECCS_Structure.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SignalHost.cs" />
+    <Compile Include="View\ucCrane_Sts.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="View\ucCrane_Sts.Designer.cs">
+      <DependentUpon>ucCrane_Sts.cs</DependentUpon>
+    </Compile>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mirle.Def\Mirle.Def_2.csproj">
@@ -74,6 +81,12 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup />
+  <ItemGroup>
+    <EmbeddedResource Include="View\ucCrane_Sts.resx">
+      <DependentUpon>ucCrane_Sts.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.115.5\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets" Condition="Exists('..\packages\Stub.System.Data.SQLite.Core.NetFramework.1.0.115.5\build\net46\Stub.System.Data.SQLite.Core.NetFramework.targets')" />
