feat: 整合測試修正

--- a/Mirle.WebAPI.Event.U2NMMA30/Mirle.WebAPI.Event.csproj
+++ b/Mirle.WebAPI.Event.U2NMMA30/Mirle.WebAPI.Event.csproj
@@ -58,6 +58,8 @@
     <Compile Include="ModelsForControllers\AlarmInfo.cs" />
     <Compile Include="ModelsForControllers\AGVPosReportInfo.cs" />
     <Compile Include="ModelsForControllers\ControlChangeInfo.cs" />
+    <Compile Include="ModelsForControllers\LotNGReportInfo.cs" />
+    <Compile Include="ModelsForControllers\ModeChangeInfo.cs" />
     <Compile Include="ModelsForControllers\WrongEquStockInInfo.cs" />
     <Compile Include="ModelsForControllers\UnknownBinLeaveInfo.cs" />
     <Compile Include="ModelsForControllers\TransferCommandDoneInfo.cs" />
