--- a/Mirle.WebAPI.Event.U2NMMA30/Mirle.WebAPI.Event.csproj
+++ b/Mirle.WebAPI.Event.U2NMMA30/Mirle.WebAPI.Event.csproj
@@ -46,6 +46,9 @@
   <ItemGroup>
     <Compile Include="ApiEventController.cs" />
     <Compile Include="clsWriLog.cs" />
+    <Compile Include="ModelsForControllers\SMTCMagazineLoadRequestInfo.cs" />
+    <Compile Include="ModelsForControllers\SMTCEmptyMagazineUnloadInfo.cs" />
+    <Compile Include="ModelsForControllers\SMTCEmptyMagazineLoadRequestInfo.cs" />
     <Compile Include="ModelsForControllers\LocationDisableRequestInfo.cs" />
     <Compile Include="ModelsForControllers\ForkStatusReportInfo.cs" />
     <Compile Include="ModelsForControllers\ForkStatusList.cs" />
