--- a/Mirle.WebAPI.U2NMMA30/Mirle.WebAPI.csproj
+++ b/Mirle.WebAPI.U2NMMA30/Mirle.WebAPI.csproj
@@ -52,6 +52,7 @@
     <Compile Include="FunctionForController\BufferInitial.cs" />
     <Compile Include="FunctionForController\BufferStatusQuery.cs" />
     <Compile Include="FunctionForController\MoveTask.cs" />
+    <Compile Include="FunctionForController\EmptyBinLoadDone.cs" />
     <Compile Include="FunctionForController\TransferCommandRequest.cs" />
     <Compile Include="FunctionForController\TaskCancel.cs" />
     <Compile Include="FunctionForController\RetrieveTransfer.cs" />
@@ -113,6 +114,7 @@
     <Compile Include="ReplyForWES\LotPutawayCheckReply.cs" />
     <Compile Include="ReplyForWES\CarrierPutawayCheckReply.cs" />
     <Compile Include="ReportInfoForController\BufferInitialInfo.cs" />
+    <Compile Include="ReportInfoForController\EmptyBinLoadDoneInfo.cs" />
     <Compile Include="ReportInfoForController\MoveTaskInfo.cs" />
     <Compile Include="ReportInfoForController\TransferCommandRequestInfo.cs" />
     <Compile Include="ReportInfoForController\TaskCancelInfo.cs" />
