feat: 正在撰寫新增產線與線邊倉公用點

--- a/Mirle.Structure/Mirle.Structure.csproj
+++ b/Mirle.Structure/Mirle.Structure.csproj
@@ -49,6 +49,7 @@
     <Compile Include="CraneInfo.cs" />
     <Compile Include="CstInfo.cs" />
     <Compile Include="DeviceInfo.cs" />
+    <Compile Include="TwoNodeOneStnnoInfo.cs" />
     <Compile Include="DisabledLoc.cs" />
     <Compile Include="EnhancedCarrierInfo.cs" />
     <Compile Include="EnhancedDisabledLoc.cs" />
