--- a/Mirle.DB.Object/Mirle.DB.Object.csproj
+++ b/Mirle.DB.Object/Mirle.DB.Object.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Service\clsControllerID.cs" />
     <Compile Include="Service\clsAPI.cs" />
     <Compile Include="Service\clsMiddle.cs" />
     <Compile Include="Service\clsDB_Proc.cs" />
