feat: 更新PCBA倉故障路徑選擇

--- a/Mirle.WebAPI.Event.U2NMMA30/Mirle.WebAPI.Event.csproj
+++ b/Mirle.WebAPI.Event.U2NMMA30/Mirle.WebAPI.Event.csproj
@@ -140,6 +140,10 @@
       <Project>{906da4ee-6b8d-40c7-bd49-a410feb1d2c8}</Project>
       <Name>Mirle.Def_2</Name>
     </ProjectReference>
+    <ProjectReference Include="..\Mirle.MapController\Mirle.MapController_2.csproj">
+      <Project>{e9c71b96-e8f4-4124-9f18-444e8a05cf80}</Project>
+      <Name>Mirle.MapController_2</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Mirle.Middle\Mirle.Middle.csproj">
       <Project>{312ed336-0211-4e88-9f3f-6b15a133f864}</Project>
       <Name>Mirle.Middle</Name>
