--- a/Mirle.Structure/Mirle.Structure.csproj
+++ b/Mirle.Structure/Mirle.Structure.csproj
@@ -49,6 +49,7 @@
     <Compile Include="CraneInfo.cs" />
     <Compile Include="CstInfo.cs" />
     <Compile Include="DeviceInfo.cs" />
+    <Compile Include="L2LCountInfo.cs" />
     <Compile Include="TwoNodeOneStnnoInfo.cs" />
     <Compile Include="DisabledLoc.cs" />
     <Compile Include="EnhancedCarrierInfo.cs" />
